gibbon-compiler/examples/hs/should_fail/Fail3.hs
module Fail3 where

foo :: a -> Int
foo x = x + 1
